[project]
name = "jxc"
version = "0.8.2"
authors = [
    { name="Judd Cohen", email="jcohen@juddnet.com" },
]
description = "JXC parsing and serialization library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://jxc.juddnet.com"
"Documentation" = "https://jxc.juddnet.com/jxc_python_library.html"
"Bug Tracker" = "https://github.com/juddc/jxc/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.7.0",
]
build-backend = "setuptools.build_meta"
