[project]
name = "jxc"
version = "0.9.0"
authors = [
    { name="Judd Cohen", email="jcohen@juddnet.com" },
]
description = "JXC is a structured data language similar to JSON, but with a focus on being expressive, extensible, and human-friendly."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://jxc.juddnet.com"
"Documentation" = "https://jxc.juddnet.com/jxc_python_library.html"
"Bug Tracker" = "https://github.com/juddc/jxc/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.7.0",
]
build-backend = "setuptools.build_meta"
